--- a/src/main/webapp/pages/details.html
+++ b/src/main/webapp/pages/details.html
@@ -1,15 +1,10 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-         pageEncoding="UTF-8" %>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-<c:set var="path" value="${pageContext.request.contextPath}"/>
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="${path}/resources/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/bootstrap.min.css}">
 </head>
 <body>
 
@@ -22,9 +17,8 @@
             <span class="fs-4"></span>
         </a>
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="<c:url value="/" /> " class="nav-link active" aria-current="page">Home</a>
+            <li class="nav-item"><a href="@{/}" class="nav-link active" aria-current="page">Home</a>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Add new record</a></li>
         </ul>
     </header>
 </div>
@@ -41,17 +35,17 @@
         </thead>
         <tbody>
             <tr>
-                <th scope="row">${employee.id}</th>
-                <td>${employee.name}</td>
-                <td>${employee.email}</td>
+                <th scope="row" th:text="${employee.id}"></th>
+                <td th:text="${employee.name}"></td>
+                <td th:text="${employee.email}"></td>
                 <td>
-                    <a href="${path}/edit/<c:out value='${employee.id}'/>">Edit</a>&nbsp;
+                    <a th:href="@{/edit/{id} (id=${employee.id})}">Edit</a>&nbsp;
                </td>
             </tr>
         </tbody>
     </table>
 </div>
-<script src="${path}/resources/js/bootstrap.bundle.min.js"></script>
+<script th:src="${path}/resources/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
