--- a/src/main/webapp/pages/edit.html
+++ b/src/main/webapp/pages/edit.html
@@ -1,15 +1,10 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-         pageEncoding="UTF-8" %>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-<c:set var="path" value="${pageContext.request.contextPath}"/>
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="${path}/resources/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/bootstrap.min.css}">
 </head>
 <body>
 
@@ -22,36 +17,36 @@
             <span class="fs-4"></span>
         </a>
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="<c:url value="/" /> " class="nav-link active" aria-current="page">Home</a>
+            <li class="nav-item"><a href="@{/}" class="nav-link active" aria-current="page">Home</a>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Add new record</a></li>
         </ul>
     </header>
 </div>
 
 <div class="container">
     <div class="row">
-        <form action="/save" method="post">
+        <form th:action="@{/edit}" method="post">
+            <input type="hidden" class="form-control" name="id" th:value="${employee.id}">
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Enter Your Name">
+                <input type="text" class="form-control" id="name" name="name" th:value="${employee.name}" placeholder="Enter Your Name">
             </div>
 
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="Enter Your Email">
+                <input type="email" class="form-control" id="email" name="email" th:value="${employee.email}" placeholder="Enter Your Email">
             </div>
 
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="*************************">
+                <input type="password" class="form-control" id="password" name="password"  th:value="${employee.password}" placeholder="*************************">
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 </div>
-<script src="${path}/resources/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/resources/js/bootstrap.bundle.min.js}"></script>
 </body>
 
 </html>
